--- a/SDL2_Engine_Project.vcxproj
+++ b/SDL2_Engine_Project.vcxproj
@@ -98,6 +98,7 @@
       <LanguageStandard>stdcpp20</LanguageStandard>
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <UseFullPaths>false</UseFullPaths>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
@@ -135,6 +136,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)dependencies\imgui-master\backends;$(SolutionDir)dependencies\imgui-master;$(SolutionDir)dependencies\SDL2\SDL2\include;$(SolutionDir)dependencies\SDL2\SDL2_image\include;$(SolutionDir)dependencies\SDL2\SDL2_ttf\include;$(SolutionDir)dependencies\SDL2\SDL2_mixer\include;$(SolutionDir)source;$(SolutionDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <UseFullPaths>false</UseFullPaths>
     </ClCompile>
     <Link>
       <AdditionalDependencies>SDL2.lib;SDL2_image.lib;SDL2_ttf.lib;SDL2_mixer.lib;SDL2main.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
