--- a/config/assets/fonts.cfg
+++ b/config/assets/fonts.cfg
@@ -1,3 +1,3 @@
-file_name="assets/fonts/Consola.ttf" size=12
-file_name="assets/fonts/Consola.ttf" size=14
-file_name="assets/fonts/Consola.ttf" size=18
+file_name="assets/fonts/Consola.ttf";size=12;wrap_align=1
+file_name="assets/fonts/Consola.ttf";size=14;wrap_align=1
+file_name="assets/fonts/Consola.ttf";size=18;wrap_align=1
