--- a/config/assets.cfg
+++ b/config/assets.cfg
@@ -1,8 +1,9 @@
-﻿image=1;font=2;text=5;sound=6;music=7;timer=7;cursor=7;
+﻿image=1;font=3;text=6;sound=8;music=9;timer=9;cursor=9;
 type="image";id=1000000;file_name="assets/images/logo_big.png";frames=1;
+type="image";id=1000001;file_name="assets/images/ui/button_80x24.png";frames=3;
 type="font";id=1100000;file_name="assets/fonts/Consola.ttf";size=12;wrap_align=1;
 type="font";id=1100001;file_name="assets/fonts/Consola.ttf";size=14;wrap_align=1;
 type="font";id=1100002;file_name="assets/fonts/Consola.ttf";size=18;wrap_align=1;
 type="text";id=1200000;color=0,127,127,255;font_id=1100002;wrap_width=0;en="Hello\nWorld";bg="Здравей\nСвят";
+type="text";id=1200001;color=0,0,0,255;font_id=1100002;wrap_width=0;en="Click me!";bg="Шляпай ме!";
 type="sound";id=1300000;file_name="assets/sounds/clicks/mouse_click.wav";volume=128;
-type="cursor";id=1600000;file_name="assets/sounds/clicks/mouse_click.wav";volume=128;
