--- a/config/objects.cfg
+++ b/config/objects.cfg
@@ -1,4 +1,5 @@
-﻿image=1;font=2;text=2;sound=3;music=4;timer=4;cursor=4;
+﻿image=1;text=2;sound=3;ui=4;music=5;timer=5;cursor=5;
 type="image";id=1000000;
 type="text";id=1200000;
 type="sound";id=1300000;
+type="ui";id=2000000;image_id=1000001;text_id=1200001;sound_id=1300000;
