--- a/config/assets.cfg
+++ b/config/assets.cfg
@@ -1,9 +1,17 @@
-﻿image=1;font=3;text=6;sound=8;music=9;timer=9;cursor=9;
+﻿image=1;font=6;text=12;sound=16;music=17;timer=17;cursor=17;
 type="image";id=1000000;file_name="assets/images/logo_big.png";frames=1;
-type="image";id=1000001;file_name="assets/images/ui/button_80x24.png";frames=3;
+type="image";id=1000001;file_name="assets/images/ui/button_120x24.png";frames=3;
+type="image";id=1000002;file_name="assets/images/ui/checkbox.png";frames=2;
+type="image";id=1000003;file_name="assets/images/ui/radio_button.png";frames=2;
+type="image";id=1000004;file_name="assets/images/ui/textbox_280x24.png";frames=1;
 type="font";id=1100000;file_name="assets/fonts/Consola.ttf";size=12;wrap_align=1;
 type="font";id=1100001;file_name="assets/fonts/Consola.ttf";size=14;wrap_align=1;
 type="font";id=1100002;file_name="assets/fonts/Consola.ttf";size=18;wrap_align=1;
+type="font";id=1100003;file_name="assets/fonts/Arial.ttf";size=12;wrap_align=1;
+type="font";id=1100004;file_name="assets/fonts/Arial.ttf";size=14;wrap_align=1;
+type="font";id=1100005;file_name="assets/fonts/Arial.ttf";size=18;wrap_align=1;
 type="text";id=1200000;color=0,127,127,255;font_id=1100002;wrap_width=0;en="Hello\nWorld";bg="Здравей\nСвят";
-type="text";id=1200001;color=0,0,0,255;font_id=1100002;wrap_width=0;en="Click me!";bg="Шляпай ме!";
+type="text";id=1200001;color=0,0,0,255;font_id=1100003;wrap_width=0;en="Click me!";bg="Шляпай ме!";
+type="text";id=1200002;color=0,0,0,255;font_id=1100003;wrap_width=0;en="Some text";bg="Някакъв текст";
+type="text";id=1200003;color=0,0,0,255;font_id=1100003;wrap_width=0;en="Radio button text";bg="Текст на радио бутона";
 type="sound";id=1300000;file_name="assets/sounds/clicks/mouse_click.wav";volume=128;
