--- a/config/objects.cfg
+++ b/config/objects.cfg
@@ -1,5 +1,7 @@
-﻿image=1;text=2;sound=3;ui=4;music=5;timer=5;cursor=5;
+﻿image=1;text=2;sound=3;button=4;checkbox=5;radio_button=6;cursor=7;
 type="image";id=1000000;
 type="text";id=1200000;
 type="sound";id=1300000;
-type="ui";id=2000000;image_id=1000001;text_id=1200001;sound_id=1300000;
+type="button";id=2000000;image_id=1000001;text_id=1200001;sound_id=1300000;
+type="checkbox";id=2100000;image_id=1000002;text_id=1200002;sound_id=1300000;
+type="radio_button";id=2200000;image_id=1000003;text_id=1200003;sound_id=1300000;
